@@ -1,3 +1,11 @@
+2006-11-05  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* flumotion/component/dvb/dvb.py:
+	* flumotion/component/dvb/dvb.xml:
+	Add device property so we can actually select adapter we want
+	to use for DVB-S and DVB-T.
+	Require filename parameter for dvb-type: FILE.
+
 2006-11-05  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* configure.ac:
